--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -17,10 +17,9 @@
             android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton"
@@ -30,7 +29,6 @@
             android:layout_marginBottom="24dp"
             android:clickable="true"
             android:focusable="true"
-            android:navigateToAddFragment="@{true}"
             android:src="@drawable/ic_add"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -62,5 +60,4 @@
             app:layout_constraintTop_toBottomOf="@+id/no_data_imageView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
