BUGFIX | Fix DataBinding Bug

--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -40,6 +40,7 @@
             android:entries="@array/priorities"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
+            android:parsePriorityToInt="@{args.currentItem.priority}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
