--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -45,6 +45,7 @@
             android:id="@+id/no_data_imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
             android:src="@drawable/ic_no_data"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:alpha="0.5"
+            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
             android:text="@string/no_data"
             android:textSize="16sp"
             android:visibility="invisible"
