--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -11,7 +11,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_margin="4dp"
+        android:sendDataToUpdateFragment="@{toDoData}"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/row_background"
